--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body
 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding-left: 13%;
-    padding-right: 13%;
+    padding-left: 13em;
+    padding-right: 13em;
     padding-top: .5%;
 
 }
@@ -53,15 +53,17 @@ a, a:hover
 }
 .spacebetween
 {
-    width: 53%;
-    height: 1%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
 }
 .search
 {
+    filter: grayscale(1);
     margin-top: 1em;
     margin-left: 1em;
     height: 2em;
-    transition: transform .2s;
+    transition: filter .2s;
 }
 .search img
 {
@@ -70,7 +72,8 @@ a, a:hover
 .search:hover
 {
     cursor: pointer;
-    transform: scale(1.2,1.2);
+    filter: grayscale(0);
+    
 }
 .modal-body
 {
@@ -93,10 +96,79 @@ a, a:hover
    text-align: center;
    font-size: 1.3em;
    font-weight: 600;
-   transition: transform .2s;
+   transition: color .2s;
    margin-right: 5%;
 }
 .menubtn:hover{
     cursor: pointer;
-    transform: scale(1.1,1.1);
+    color: rgb(237, 50, 55);
+}
+.newsblock
+{
+    border: solid .1em lightgray;
+    border-top: none;
+    width: 100%;
+    height: 34%;
+    padding-top: 4%;
+    padding-left: 3%;
+    padding-right: 3%;
+}
+.newsblock span
+{
+    transition: color .15s;
+}
+.newsblock h1
+{
+    margin-left: 1.5%;
+    font-weight: bold;
+    font-size: 3em;
+    display: inline-block;
+    margin-bottom: .5em;
+}
+.new
+{
+    height: 60%;
+    width: 30%;
+    font-size: 1.3em;
+    font-weight: 600;
+    margin-left: 2%;
+    display: block;
+}
+.new img
+{
+    width: 100%;
+}
+.new:nth-child(1)
+{
+    margin-left: 0;
+}
+.new img
+{
+    margin-bottom: .7em;
+}
+.newsblock span:hover
+{
+    cursor: pointer;
+    color: rgb(237, 50, 55);
+}
+.date
+{
+    opacity: .4;
+    font-weight: 800;
+    margin-left: 15.8%;
+    font-size: larger;
+}
+.date:nth-child(1)
+{
+    margin-left: 0;
+}
+footer
+{
+    margin-top: 3em;
+}
+footer .menu
+{
+    border: none;
+    justify-content: start;
+    padding-left: 0;
 }
